syntax = "proto3";

package test.common.substitution;

import "test/fuzz/common.proto";

import "validate/validate.proto";

// Structured input for substitution_formatter_fuzz_test.

message TestCase {
  // Do not allow invalid header characters in %REQ(...)% and %RESP(...)%.
  // It will crash the fuzzer on LowerCaseString asserts.
  string format = 1 [(validate.rules).string.pattern = "[^%\\(REQ|RESP\\)\\([^\\r\\0\\n]\\)%]"];
  test.fuzz.Headers request_headers = 2;
  test.fuzz.Headers response_headers = 3;
  test.fuzz.Headers response_trailers = 4;
  test.fuzz.StreamInfo stream_info = 5;
}
